--- a/CSS/style.css
+++ b/CSS/style.css
@@ -140,14 +140,23 @@ th, td{
 }
 form p{
     width: 60px;
+    color: var(--text-color-white);
+}
+form h3{
+    color: var(--text-color-white);
 }
 form input{
     width: 480px;
     margin: 0 20px;
+    border-radius: 10px;
 }
 form label{
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 10px;
+}
+.formulario{
+    background-color: var(--background-color);
+    border-radius: 10px;
 }
